# clip-jax

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
clip_jax/: __init__.py  configuration_clip.py  data.py  maxtext_model.ipynb  modeling.py  partitions.py  tokenizer.py  utils.py  wandb_utils.py
clip_jax/maxtext/: README.md  checkpointing.py  max_utils.py  multihost_dataloading.py  pyconfig.py  tokenizer.py
clip_jax/maxtext/input_pipeline/: _grain_data_processing.py  _hf_data_processing.py  _input_pipeline_utils.py  _tfds_data_processing.py  _tfds_data_processing_c4_mlperf.py  input_pipeline_interface.py
clip_jax/maxtext/layers/: attentions.py  embeddings.py  gemma.py  gpt3.py  initializers.py  linears.py  llama2.py  mistral.py  models.py  normalizations.py  pipeline.py  quantizations.py  simple_layer.py
configs/: base-patch16-causal.json  base-patch16-clip.json  base-patch16.json  huge-patch16.json  large-patch16-cappa-registers.json  large-patch16-cappa.json  large-patch16-clip.json  large-patch16.json  larger-patch16.json  medium-patch16-clip.json  mini-patch16-cappa.json  mini-vision-maxtext.json  small-patch16.json  tiny-debug-cappa.json  tiny-debug.json
dataset/: prepare_dataset.ipynb
training/: adafactor.py  do_train.bash  kron.py  kron_test_no_sharding.py  kron_tiny_test.py  muon.py  run_benchmark.py  train.py  train_clip.py
training/configs/clip-debug/: config.json
training/configs/clip-vit-base-patch16/: config.json
training/configs/clip-vit-large-patch14/: config.json
training/configs/clip-vit-large-patch16/: config.json
training/configs/clip-vit-large-patch16-improved/: config.json
training/configs/clip-vit-medium-patch16/: config.json
training/precondition_local/: distributed_shampoo.py
training/scalable_shampoo/: README.md  distributed_shampoo.py  quantization_utils.py  sm3.py
utils/: convert_cappa_to_clip.ipynb  demo.ipynb  demo_cappa.ipynb  run_benchmark.py  run_benchmark_cappa.py  run_benchmark_sugarcrepe.ipynb
(+1 files in other folders)
